# csnake

./: CMakeLists.txt  csnake
include/: Apple.h  Map.h  Snake.h
src/: Apple.c  Map.c  Snake.c  main.c
